# switchbot-temperature-dashboard-for-pi

./: .env.example  .gitignore  README.md  amedas.py  docker-compose.yml  influxdb.py  install_service.sh  main.py  pyproject.toml  switchbot.py  uninstall_service.sh
